# solver

./: README.md  alg.go  arch.go  array.go  assert.go  cube.go  design.uml  design1.uml  facelets.go  go.mod  go.work  main.go  main_test.go  moves.go  moves_test.go  node.go  solve.go  solve_test.go  visited.go  visited_test.go
.github/workflows/: static.yml
cli/: solve.go
demo/: index.html  package-lock.json  package.json  vite.config.js
demo/src/: main.ts
rs-solver/: Cargo.toml
rs-solver/src/: algorithm.rs  arch.rs  cube.rs  main.rs  moves.rs  node.rs  solve.rs  visited.rs
solver/: Cargo.toml  array.go  constants.go  cube.go  facelets.go  moves.go  moves_test.go  node.go  solve.go  solve_test.go  visited.go  visited_test.go
solver-js/: README.md  build.sh  index.ts  package-lock.json  package.json  tsconfig.json  worker.ts
solver-js/pkg/: README.md  solver_wasm_bg.wasm
solver-js/src/: index.ts  worker.js
solver-js/src/pkg/: solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
solver-wasm/: Cargo.toml  README.md  build.sh
solver-wasm/pkg/: package.json  solver_wasm.d.ts  solver_wasm.js  solver_wasm_bg.js  solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
solver-wasm/src/: lib.rs
solver/src/: algorithm.rs  arch.rs  constants.rs  cube.rs  main.rs  moves.rs  node.rs  queue.rs  scramble.rs  solve.rs  visited.rs
wasm/: Cargo.toml  README.md
wasm-demo/: index.html
wasm/src/: lib.rs
