[package]
name = "solver-wasm"
description = "Meant to be used in @spencerchubb/solver. Not recommended for direct use"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
solver = { path = "../solver" }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
